# db_struct_mapper

./: Cargo.toml  README.md
db_struct_mapper/: Cargo.toml
db_struct_mapper/src/: lib.rs
db_struct_mapper/tests/: test_pgsql.rs
db_struct_mapper_derive/: Cargo.toml
db_struct_mapper_derive/src/: derive_parts.rs  impl_funcs.rs  internals.rs  lib.rs
db_struct_mapper_derive/src/derive_parts/: insert.rs  select.rs  trait_checks.rs
db_struct_mapper_derive/src/impl_funcs/: insert.rs  isdbstruct.rs  trait_checks.rs
db_struct_mapper_derive/src/internals/: common.rs  derived_fetch_helper_struct.rs  derived_insert_helper_struct.rs  derived_primary_key_struct.rs  fields_struct.rs  parsed_field.rs  parsed_struct.rs  struct_attributes_parsed.rs  struct_fields_parsed.rs  struct_fully_parsed.rs  symbols.rs  utils.rs
db_struct_mapper_internal/: Cargo.toml  build.rs
db_struct_mapper_internal/src/: blanket_implementations.rs  lib.rs  traits.rs
