[package]
name = "db_struct_mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
db_struct_mapper_derive = {version = "0.1", path = "../db_struct_mapper_derive"}
db_struct_mapper_internal ={version = "0.1", path = "../db_struct_mapper_internal"}

[dev-dependencies]
sqlx = { version = "0.8.6", features = ["postgres"] }