[package]
name = "db_struct_mapper_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
db_struct_mapper_internal = {version = "0.1", path = "../db_struct_mapper_internal"}
quote = {workspace = true}
proc-macro2 = {workspace = true}
syn = {workspace = true, features = ["full", "extra-traits"] }
